# IdealAndTruth

./: .gitignore  BuildAll.bat  BuildAllExtern.bat  CMakeLists.txt  LICENSE  README.md  Settings.lua  Settings.lua.in  THIRD-PARTY-NOTICES.txt
Resource/: part_2.rcom
Resource/Material/: BoxMaterial.lua
Resource/Mesh/: pbrSphere.iver
Resource/Model/: box.lua  gun.lua
Resource/RawModel/: gun.fbx  normalTest.blend  pbrSphere.fbx  test5.fbx
Resource/Scene/: PBR_IBL_TEST.lua
Resource/Script/: D3DSetting.lua  FMSSetting.lua  SkyBox.lua
Resource/Shader/: DefaultPS.cso  DefaultVS.cso  SkyPixelShader.cso  SkyVertexShader.cso  VertexSuperDummy.cso
Resource/Texture/skybox/daywall/: BakerSampleDiffuseMDR.dds
Resource/Texture/skybox/defaultSky/: testSkyMapDiffuseHDR.dds  testSkyMapDiffuseMDR.dds
Resource/Texture/skybox/nightCity/: nightCityDiffuseHDR.dds  nightCityDiffuseMDR.dds
src/: Settings.lua
src/ExternLib/IdealRenderer/: IRenderer.h  IdealError.h  RenameType.h
src/ExternLib/Lua/: LuaBinder.h  lua.h
src/ExternLib/assimp/: revision.h  vector2.h
src/IdealGraphics/: CMakeLists.txt  Camera.cpp  Camera.h  D3D11Renderer.h  IdealError.h  IdealGraphics.sln  Sphere.cpp  Sphere.h
src/IdealGraphics/IdealGraphics/: Camera.cpp  Camera.h  CustomBuffer.h  D3D11Renderer.cpp  D3D11Renderer.h  Geometry.h  ICamera.h  IRenderer.cpp  IRenderer.h  IdealError.h  IdealGraphics.vcxproj  IdealGraphics.vcxproj.filters  Sphere.cpp  Vertex.cpp  Vertex.h  pch.h  stringUtil.h
src/IdealGraphics/IdealGraphicsDemo/: DemoProcess.cpp  DemoProcess.h  FilePathUtil.cpp  FilePathUtil.h  FileStorage.cpp  FileStorage.h  IManagers.h  IdealGraphicsDemo.cpp  IdealGraphicsDemo.vcxproj  IdealGraphicsDemo.vcxproj.filters  MemoryFileStream.cpp  MemoryFileStream.h  Resource.h  TImguiManager.cpp  TImguiManager.h  TInputManager.cpp  TInputManager.h  imgui.ini  luaMacro.h  lua_tinker.cpp  lua_tinker.h  main.cpp  stringUtil.cpp  stringUtil.h
src/IdealGraphics/IdealGraphicsDemo/compress/: part_3.rcom
src/IdealGraphics/MeshExpoter/: Geometry.h  MeshExpoter.vcxproj  MeshExpoter.vcxproj.filters  main.cpp
src/IdealGraphics/ModelConverter/: AssimpType.h  CConvertButton.cpp  CConvertButton.h  CFileListContorl.cpp  CFileListContorl.h  Convert.cpp  Convert.h  ModelConverter.rc  ModelConverter.vcxproj  ModelConverter.vcxproj.filters  ModelConverterDlg.cpp  ModelConverterDlg.h  main.cpp  resource.h
src/IdealGraphics/ModelConverter/res/: ModelConverter.rc2
src/IdealGraphics/Shader/: Buffers.hlsl  DefaultPS.hlsl  DefaultVS.hlsl  Light.hlsli  PBRHelper.hlsli  Shader.vcxproj  Shader.vcxproj.filters  SkyPixelShader.hlsl
src/IdealGraphicsD3D11/: CMakeLists.txt
src/IdealGraphicsD3D11/private/: Camera.h  Color.h  CustomBuffer.h  D3D11Renderer.cpp  D3D11Renderer.h  Geometry.h  Vertex.h  VertexType.h  stringUtil.cpp
src/IdealGraphicsD3D11/public/: IRenderer.h
src/IdealGraphicsD3D11Demo/: CMakeLists.txt  IdealGraphicsDemo.cpp  imgui.ini
src/IdealGraphicsD3D11Demo/private/: DemoProcess.cpp  DemoProcess.h  IManagers.h  TImguiManager.cpp  TImguiManager.h  framework.h  luaMacro.h
src/IdealGraphicsDemo/: DemoProcess.cpp  FileStorage.cpp  FileStorage.h  IdealGraphicsDemo.rc  SecureCodec.cpp  SecureCodec.h  TImguiManager.cpp  TInputManager.cpp
src/IdealGraphicsDemo/compress/: part_0.rcom
src/ModelConverter/: CConvertButton.cpp  CConvertButton.h  CPrimitiveCreateButton.cpp  CPrimitiveCreateButton.h  CSettingButton.cpp  CSettingButton.h  Convert.cpp  Convert.h  Geometry.cpp  Geometry.h  ModelConverter.cpp  ModelConverter.h  ModelConverter.rc  ModelConverterDlg.h  VertexType.h  resource.h
src/Resource/: D3DEnum.lua  D3DSetting.lua
src/Resource/Material/: GunMaterial.lua  SphereMaterial.lua  testBox.lua
src/Resource/Mesh/: Cube.iver  gun.iver  test5.iver
src/Resource/Model/: gun.lua  sphere.lua
src/Resource/Scene/: DemoScene.lua
src/Resource/Script/: D3DSetting.lua  Enum.lua  SkyBox.lua
src/Resource/Shader/: DefaultPS.cso  DefaultVS.cso  SkyPixelShader.cso  SkyVertexShader.cso  VertexSuperDummy.cso
src/Resource/새 폴더/: Axes.iver  Cube.iver  Plane.iver
src/Shader/: Buffers.hlsl  SkyVertexShader.hlsl  VertexSuperDummy.hlsl
src/hlsl Shader/: DefaultVS.hlsl
